--- a/Version1/OptionsFunctions_eod.ipynb
+++ b/Version1/OptionsFunctions_eod.ipynb
@@ -2,12 +2,326 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "012dfd58",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>Expiration</th>\n",
+       "      <th>Strike</th>\n",
+       "      <th>% OTM/ITM</th>\n",
+       "      <th>Current Stock</th>\n",
+       "      <th>Simulated Stock</th>\n",
+       "      <th>Current Premium</th>\n",
+       "      <th>Simulated Premium</th>\n",
+       "      <th>Days Until Expiration</th>\n",
+       "      <th>Days to Gain</th>\n",
+       "      <th>Stock Gain %</th>\n",
+       "      <th>% Gain</th>\n",
+       "      <th>Implied Volatility</th>\n",
+       "      <th>Delta</th>\n",
+       "      <th>Theta</th>\n",
+       "      <th>Run_Label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2025-06-20</td>\n",
+       "      <td>217.5</td>\n",
+       "      <td>5.14</td>\n",
+       "      <td>206.86</td>\n",
+       "      <td>217.20</td>\n",
+       "      <td>2.72</td>\n",
+       "      <td>3.59</td>\n",
+       "      <td>29</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>31.88</td>\n",
+       "      <td>26.47</td>\n",
+       "      <td>0.2846</td>\n",
+       "      <td>-0.0932</td>\n",
+       "      <td>Short-Term Conservative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2025-06-20</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>6.35</td>\n",
+       "      <td>206.86</td>\n",
+       "      <td>217.20</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>2.48</td>\n",
+       "      <td>29</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>17.92</td>\n",
+       "      <td>26.30</td>\n",
+       "      <td>0.2349</td>\n",
+       "      <td>-0.0834</td>\n",
+       "      <td>Short-Term Conservative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2025-06-20</td>\n",
+       "      <td>222.5</td>\n",
+       "      <td>7.56</td>\n",
+       "      <td>206.86</td>\n",
+       "      <td>217.20</td>\n",
+       "      <td>1.59</td>\n",
+       "      <td>1.63</td>\n",
+       "      <td>29</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.23</td>\n",
+       "      <td>26.10</td>\n",
+       "      <td>0.1901</td>\n",
+       "      <td>-0.0729</td>\n",
+       "      <td>Short-Term Conservative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2025-06-20</td>\n",
+       "      <td>225.0</td>\n",
+       "      <td>8.77</td>\n",
+       "      <td>206.86</td>\n",
+       "      <td>217.20</td>\n",
+       "      <td>1.22</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>29</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>-14.92</td>\n",
+       "      <td>26.17</td>\n",
+       "      <td>0.1535</td>\n",
+       "      <td>-0.0635</td>\n",
+       "      <td>Short-Term Conservative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2025-06-20</td>\n",
+       "      <td>227.5</td>\n",
+       "      <td>9.98</td>\n",
+       "      <td>206.86</td>\n",
+       "      <td>217.20</td>\n",
+       "      <td>0.93</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>29</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>-31.53</td>\n",
+       "      <td>26.26</td>\n",
+       "      <td>0.1227</td>\n",
+       "      <td>-0.0545</td>\n",
+       "      <td>Short-Term Conservative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2025-10-17</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>35.36</td>\n",
+       "      <td>206.86</td>\n",
+       "      <td>237.89</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>2.67</td>\n",
+       "      <td>148</td>\n",
+       "      <td>45</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>266.27</td>\n",
+       "      <td>26.46</td>\n",
+       "      <td>0.0541</td>\n",
+       "      <td>-0.0139</td>\n",
+       "      <td>Long-Term Aggressive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>AMD</td>\n",
+       "      <td>2025-09-19</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>27.74</td>\n",
+       "      <td>113.51</td>\n",
+       "      <td>130.54</td>\n",
+       "      <td>3.22</td>\n",
+       "      <td>5.61</td>\n",
+       "      <td>120</td>\n",
+       "      <td>45</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>74.21</td>\n",
+       "      <td>44.06</td>\n",
+       "      <td>0.2188</td>\n",
+       "      <td>-0.0376</td>\n",
+       "      <td>Long-Term Aggressive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>AMD</td>\n",
+       "      <td>2025-09-19</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>32.15</td>\n",
+       "      <td>113.51</td>\n",
+       "      <td>130.54</td>\n",
+       "      <td>2.65</td>\n",
+       "      <td>4.47</td>\n",
+       "      <td>120</td>\n",
+       "      <td>45</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>68.55</td>\n",
+       "      <td>44.64</td>\n",
+       "      <td>0.1856</td>\n",
+       "      <td>-0.0343</td>\n",
+       "      <td>Long-Term Aggressive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>AMD</td>\n",
+       "      <td>2025-10-17</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>27.74</td>\n",
+       "      <td>113.51</td>\n",
+       "      <td>130.54</td>\n",
+       "      <td>4.15</td>\n",
+       "      <td>7.33</td>\n",
+       "      <td>148</td>\n",
+       "      <td>45</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>76.71</td>\n",
+       "      <td>43.55</td>\n",
+       "      <td>0.2505</td>\n",
+       "      <td>-0.0365</td>\n",
+       "      <td>Long-Term Aggressive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>AMD</td>\n",
+       "      <td>2025-10-17</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>32.15</td>\n",
+       "      <td>113.51</td>\n",
+       "      <td>130.54</td>\n",
+       "      <td>3.38</td>\n",
+       "      <td>6.06</td>\n",
+       "      <td>148</td>\n",
+       "      <td>45</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>79.23</td>\n",
+       "      <td>43.97</td>\n",
+       "      <td>0.2165</td>\n",
+       "      <td>-0.0338</td>\n",
+       "      <td>Long-Term Aggressive</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>74 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Ticker  Expiration  Strike  % OTM/ITM  Current Stock  Simulated Stock  \\\n",
+       "0    AAPL  2025-06-20   217.5       5.14         206.86           217.20   \n",
+       "1    AAPL  2025-06-20   220.0       6.35         206.86           217.20   \n",
+       "2    AAPL  2025-06-20   222.5       7.56         206.86           217.20   \n",
+       "3    AAPL  2025-06-20   225.0       8.77         206.86           217.20   \n",
+       "4    AAPL  2025-06-20   227.5       9.98         206.86           217.20   \n",
+       "..    ...         ...     ...        ...            ...              ...   \n",
+       "69   AAPL  2025-10-17   280.0      35.36         206.86           237.89   \n",
+       "70    AMD  2025-09-19   145.0      27.74         113.51           130.54   \n",
+       "71    AMD  2025-09-19   150.0      32.15         113.51           130.54   \n",
+       "72    AMD  2025-10-17   145.0      27.74         113.51           130.54   \n",
+       "73    AMD  2025-10-17   150.0      32.15         113.51           130.54   \n",
+       "\n",
+       "    Current Premium  Simulated Premium  Days Until Expiration  Days to Gain  \\\n",
+       "0              2.72               3.59                     29            20   \n",
+       "1              2.10               2.48                     29            20   \n",
+       "2              1.59               1.63                     29            20   \n",
+       "3              1.22               1.04                     29            20   \n",
+       "4              0.93               0.64                     29            20   \n",
+       "..              ...                ...                    ...           ...   \n",
+       "69             0.73               2.67                    148            45   \n",
+       "70             3.22               5.61                    120            45   \n",
+       "71             2.65               4.47                    120            45   \n",
+       "72             4.15               7.33                    148            45   \n",
+       "73             3.38               6.06                    148            45   \n",
+       "\n",
+       "    Stock Gain %  % Gain  Implied Volatility   Delta   Theta  \\\n",
+       "0            5.0   31.88               26.47  0.2846 -0.0932   \n",
+       "1            5.0   17.92               26.30  0.2349 -0.0834   \n",
+       "2            5.0    2.23               26.10  0.1901 -0.0729   \n",
+       "3            5.0  -14.92               26.17  0.1535 -0.0635   \n",
+       "4            5.0  -31.53               26.26  0.1227 -0.0545   \n",
+       "..           ...     ...                 ...     ...     ...   \n",
+       "69          15.0  266.27               26.46  0.0541 -0.0139   \n",
+       "70          15.0   74.21               44.06  0.2188 -0.0376   \n",
+       "71          15.0   68.55               44.64  0.1856 -0.0343   \n",
+       "72          15.0   76.71               43.55  0.2505 -0.0365   \n",
+       "73          15.0   79.23               43.97  0.2165 -0.0338   \n",
+       "\n",
+       "                  Run_Label  \n",
+       "0   Short-Term Conservative  \n",
+       "1   Short-Term Conservative  \n",
+       "2   Short-Term Conservative  \n",
+       "3   Short-Term Conservative  \n",
+       "4   Short-Term Conservative  \n",
+       "..                      ...  \n",
+       "69     Long-Term Aggressive  \n",
+       "70     Long-Term Aggressive  \n",
+       "71     Long-Term Aggressive  \n",
+       "72     Long-Term Aggressive  \n",
+       "73     Long-Term Aggressive  \n",
+       "\n",
+       "[74 rows x 16 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
@@ -29,13 +343,13 @@
     "    d2 = d1 - sigma * np.sqrt(T)\n",
     "    return S * norm.cdf(d1) - K * np.exp(-r * T) * norm.cdf(d2)\n",
     "\n",
-    "def get_current_price(ticker):\n",
+    "def current_stock_price(ticker):\n",
     "    url = f\"https://eodhd.com/api/real-time/{ticker}.US?api_token={API_KEY}&fmt=json\"\n",
     "    try:\n",
     "        response = requests.get(url, timeout=10)\n",
     "        response.raise_for_status()\n",
     "        data = response.json()\n",
-    "        return float(data.get(\"close\", 0))\n",
+    "        return float(data.get(\"close\", 0))  # ✅ Only return float\n",
     "    except Exception as e:\n",
     "        logging.warning(f\"Failed to fetch current price for {ticker}: {e}\")\n",
     "        return 0\n",
@@ -60,6 +374,7 @@
     "    except Exception as e:\n",
     "        logging.warning(f\"Error fetching options contracts for {symbol}: {e}\")\n",
     "        return []\n",
+    "\n",
     "def analyze_options_unicorn(\n",
     "    tickers,\n",
     "    option_type=\"call\",\n",
@@ -78,7 +393,7 @@
     "\n",
     "    for ticker in tickers:\n",
     "        try:\n",
-    "            current_price = get_current_price(ticker)\n",
+    "            current_price = current_stock_price(ticker)\n",
     "            if current_price <= 0:\n",
     "                logging.info(f\"Skipping {ticker}: invalid current price.\")\n",
     "                continue\n",
@@ -137,7 +452,7 @@
     "\n",
     "    return pd.DataFrame(results)\n",
     "\n",
-    "# NEW: Helper function to run multiple parameter sets\n",
+    "# Helper function to run multiple parameter sets\n",
     "def run_multiple_analyses(param_sets):\n",
     "    combined_df = pd.DataFrame()\n",
     "    for params in param_sets:\n",
@@ -147,47 +462,99 @@
     "        combined_df = pd.concat([combined_df, df], ignore_index=True)\n",
     "    return combined_df\n",
     "\n",
-    "# # Run script\n",
-    "# if __name__ == \"__main__\":\n",
-    "#     param_sets = [\n",
-    "#         {\n",
-    "#             \"tickers\": [\"AAPL\", \"MSFT\"],\n",
-    "#             \"option_type\": \"call\",\n",
-    "#             \"days_until_exp\": 60,\n",
-    "#             \"strike_pct\": 0.1,\n",
-    "#             \"days_to_gain\": 20,\n",
-    "#             \"stock_gain_pct\": 0.05,\n",
-    "#             \"label\": \"Short-Term Conservative\"\n",
-    "#         },\n",
-    "#         {\n",
-    "#             \"tickers\": [\"AAPL\", \"AMD\"],\n",
-    "#             \"option_type\": \"call\",\n",
-    "#             \"days_until_exp\": 120,\n",
-    "#             \"strike_pct\": 0.3,\n",
-    "#             \"days_to_gain\": 45,\n",
-    "#             \"stock_gain_pct\": 0.15,\n",
-    "#             \"label\": \"Long-Term Aggressive\"\n",
-    "#         }\n",
-    "#     ]\n",
+    "# # # Run script\n",
+    "# # if __name__ == \"__main__\":\n",
+    "# param_sets = [\n",
+    "#     {\n",
+    "#         \"tickers\": [\"AAPL\", \"MSFT\"],\n",
+    "#         \"option_type\": \"call\",\n",
+    "#         \"days_until_exp\": 60,\n",
+    "#         \"strike_pct\": 0.1,\n",
+    "#         \"days_to_gain\": 20,\n",
+    "#         \"stock_gain_pct\": 0.05,\n",
+    "#         \"label\": \"Short-Term Conservative\"\n",
+    "#     },\n",
+    "#     {\n",
+    "#         \"tickers\": [\"AAPL\", \"AMD\"],\n",
+    "#         \"option_type\": \"call\",\n",
+    "#         \"days_until_exp\": 120,\n",
+    "#         \"strike_pct\": 0.3,\n",
+    "#         \"days_to_gain\": 45,\n",
+    "#         \"stock_gain_pct\": 0.15,\n",
+    "#         \"label\": \"Long-Term Aggressive\"\n",
+    "#     }\n",
+    "# ]\n",
     "\n",
-    "#     combined_results = run_multiple_analyses(param_sets)\n",
-    "#     display(combined_results)\n",
-    "#     combined_results.to_csv(\"combined_unicorn_options.csv\", index=False)\n"
+    "# combined_results = run_multiple_analyses(param_sets)\n",
+    "# display(combined_results)\n",
+    "#     # combined_results.to_csv(\"combined_unicorn_options.csv\", index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "ae746701-e2fc-46d2-a5bb-e7e6a5ea1bdc",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"contract\": \"AAPL250718C00225000\",\n",
+      "    \"underlying_symbol\": \"AAPL\",\n",
+      "    \"exp_date\": \"2025-07-18\",\n",
+      "    \"expiration_type\": \"monthly\",\n",
+      "    \"type\": \"call\",\n",
+      "    \"strike\": 225,\n",
+      "    \"exchange\": \"NASDAQ\",\n",
+      "    \"currency\": \"USD\",\n",
+      "    \"open\": 3,\n",
+      "    \"high\": 3.25,\n",
+      "    \"low\": 2.65,\n",
+      "    \"last\": 2.92,\n",
+      "    \"last_size\": 1,\n",
+      "    \"change\": -0.33,\n",
+      "    \"pctchange\": -10.15,\n",
+      "    \"previous\": 3.25,\n",
+      "    \"previous_date\": \"2025-05-19\",\n",
+      "    \"bid\": 2.88,\n",
+      "    \"bid_date\": \"2025-05-20 19:59:59\",\n",
+      "    \"bid_size\": 22,\n",
+      "    \"ask\": 2.92,\n",
+      "    \"ask_date\": \"2025-05-20 19:59:59\",\n",
+      "    \"ask_size\": 91,\n",
+      "    \"moneyness\": -0.08999999999999997,\n",
+      "    \"volume\": 1795,\n",
+      "    \"volume_change\": 303,\n",
+      "    \"volume_pctchange\": 20.31,\n",
+      "    \"open_interest\": 14208,\n",
+      "    \"open_interest_change\": 116,\n",
+      "    \"open_interest_pctchange\": 0.82,\n",
+      "    \"volatility\": 0.258,\n",
+      "    \"volatility_change\": 0.0082,\n",
+      "    \"volatility_pctchange\": 3.27,\n",
+      "    \"theoretical\": 2.92,\n",
+      "    \"delta\": 0.242255,\n",
+      "    \"gamma\": 0.014559,\n",
+      "    \"theta\": -0.061749,\n",
+      "    \"vega\": 0.259763,\n",
+      "    \"rho\": 0.076292,\n",
+      "    \"tradetime\": \"2025-05-20\",\n",
+      "    \"vol_oi_ratio\": 0.13,\n",
+      "    \"dte\": 59,\n",
+      "    \"midpoint\": 2.9\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import json\n",
     "\n",
-    "API_KEY = \"67ffece4b2ae08.94077168\"\n",
+    "# API_KEY = \"67ffece4b2ae08.94077168\"\n",
     "BASE_URL = \"https://eodhd.com/api/mp/unicornbay/options/contracts\"\n",
     "\n",
     "def fetch_specific_option(symbol, strike, exp_date, option_type=\"call\"):\n",
@@ -214,14 +581,14 @@
     "    except Exception as e:\n",
     "        print(f\"Error fetching option: {e}\")\n",
     "\n",
-    "# # Example usage\n",
-    "# if __name__ == \"__main__\":\n",
-    "#     fetch_specific_option(\n",
-    "#         symbol=\"AAPL\",\n",
-    "#         strike=225,\n",
-    "#         exp_date=\"2025-07-18\",\n",
-    "#         option_type=\"call\"\n",
-    "#     )\n"
+    "# Example usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    fetch_specific_option(\n",
+    "        symbol=\"AAPL\",\n",
+    "        strike=225,\n",
+    "        exp_date=\"2025-07-18\",\n",
+    "        option_type=\"call\"\n",
+    "    )\n"
    ]
   }
  ],
