only updated serializers and models.py so far working on updating watchlist with grouping

--- a/Version1/Prod/optionsFunctions2_eod.ipynb
+++ b/Version1/Prod/optionsFunctions2_eod.ipynb
@@ -246,9 +246,9 @@
     "        \"Option Type\",\n",
     "        \"Expiration\",\n",
     "        \"Strike\",\n",
-    "        \"Current Stock\",\n",
+    "        \"Underlying Price\",\n",
     "        \"Current Premium\",\n",
-    "        \"Stock Gain %\",\n",
+    "        \"Underlying Gain %\",\n",
     "        \"Premium % Gain\",\n",
     "        \"Implied Volatility\",\n",
     "        \"Bid Date\",\n",
